package Enums;

/**
 *
 * @author daniel
 */
public enum ColorJugador {
    
    ROJO,
    AZUL;
}
