package Enums;

/**
 *
 * @author daniel
 */
public enum OrientacionNave {
    
    HORIZONTAL,
    VERTICAL;
}
