package dtos.enums;

public enum EstadoNaveDTO {

    AVERIADO,
    HUNDIDO,
    SIN_DAÑOS;
}
