package models.entidades;

import models.enums.EstadoCasilla;
import models.enums.EstadoNave;
import models.enums.ResultadoDisparo;
import java.util.List;

/**
 *
 * @author daniel
 */
public class Tablero {

    private Casilla[][] casillas;
    private int limiteX;
    private int limiteY;

    public Tablero(Casilla[][] casillas, int limiteX, int limiteY) {
        this.casillas = casillas;
        this.limiteX = limiteX;
        this.limiteY = limiteY;
    }

    public ResultadoDisparo realizarDisparo(Coordenadas c) {
        if (c.getX() >= limiteX || c.getX() < 0 || c.getY() >= limiteY || c.getY() < 0) {
            System.out.println("Error: coordenada fuera de rango (" + c.getX() + ", " + c.getY() + ")");
            return null;
        }

        Casilla casilla = casillas[c.getX()][c.getY()];
        Nave nave = casilla.getNave();
        EstadoCasilla eC = casilla.getEstado();

        if (eC == EstadoCasilla.YA_DISPARADO) {
            return ResultadoDisparo.YA_DISPARADO;
        }

        if (nave != null) {
            EstadoNave estadoNave = nave.addDisparo();

            if (estadoNave == EstadoNave.AVERIADO || estadoNave == EstadoNave.SIN_DAÑOS) {
                casilla.setEstado(EstadoCasilla.YA_DISPARADO);
                return ResultadoDisparo.IMPACTO;
            } else if (estadoNave == EstadoNave.HUNDIDO) {
                casilla.setEstado(EstadoCasilla.YA_DISPARADO);
                return ResultadoDisparo.HUNDIMIENTO;
            }
        }

        if (eC == EstadoCasilla.AGUA) {
            casilla.setEstado(EstadoCasilla.YA_DISPARADO);
            return ResultadoDisparo.AGUA;
        }

        casilla.setEstado(EstadoCasilla.YA_DISPARADO);

        casilla.setEstado(EstadoCasilla.YA_DISPARADO);
        return ResultadoDisparo.AGUA;
    }

    public boolean addNave(Nave nave, List<Coordenadas> coordenadas) {
        coordenadas.forEach(c -> casillas[c.getX()][c.getY()].setNave(nave));

        return true;
    }

    public Nave getNave(Coordenadas coordenadas) {
        return casillas[coordenadas.getX()][coordenadas.getY()].getNave();
    }
    
    public Casilla[][] getCasillas() {
        return casillas;
    }

    public int getLimiteX() {
        return limiteX;
    }

    public int getLimiteY() {
        return limiteY;
    }

}
