@startuml DiagramaDominio

title Diagrama de Dominio - Batalla Naval\nEquipo 3 - Arquitectura de Software

skinparam backgroundColor White
skinparam class {
    BackgroundColor White
    BorderColor Black
}

' ==================== CLASES PRINCIPALES ====================

class Partida {
    - cantBarcos: int = 3
    - cantSubmarinos: int = 4
    - cantCruceros: int = 2
    - cantPortaAviones: int = 2
    - totalNaves: int = 11
    --
    + empezarPartida(): void
    + cambiarTurno(): boolean
    + realizarDisparo(): Disparo
    + addNave(): ResultadoAddNave
    + abandonarPartida(): void
}

class Jugador {
    - nombre: String
    --
    + getNombre(): String
    + getColor(): ColorJugador
    + getEstado(): EstadoJugador
    + getNaves(): List
    + getTablero(): Tablero
}

class Tablero {
    - limiteX: int = 10
    - limiteY: int = 10
    --
    + realizarDisparo(): ResultadoDisparo
    + addNave(): boolean
    + getCasillas(): Casilla[][]
}

class Casilla {
    --
    + getNave(): Nave
    + setNave(): void
    + getEstado(): EstadoCasilla
}

class Coordenadas {
    - x: int
    - y: int
    --
    + getX(): int
    + getY(): int
}

class Disparo {
    - tiempo: Instant
    - tipoNaveImpactada: String
    - tipoNaveHundida: String
    --
    + getResultadoDisparo(): ResultadoDisparo
    + getCoordenadas(): Coordenadas
}

' ==================== JERARQUIA DE NAVES ====================

abstract class Nave {
    - cantDisparos: Integer = 0
    --
    + {abstract} getTamanio(): int
    + addDisparo(): EstadoNave
    + getEstado(): EstadoNave
    + getOrientacion(): OrientacionNave
}

class PortaAviones {
    + getTamanio(): int
}

class Crucero {
    + getTamanio(): int
}

class Submarino {
    + getTamanio(): int
}

class Barco {
    + getTamanio(): int
}

' ==================== ENUMERACIONES ====================

enum EstadoPartida {
    POR_EMPEZAR
    EN_CURSO
    FINALIZADA
}

enum EstadoJugador {
    JUGANDO
    DERROTADO
    ABANDONO
}

enum EstadoNave {
    SIN_DANIOS
    AVERIADO
    HUNDIDO
}

enum ColorJugador {
    ROJO
    AZUL
}

enum OrientacionNave {
    HORIZONTAL
    VERTICAL
}

enum EstadoCasilla {
    NO_DISPARADO
    YA_DISPARADO
}

enum ResultadoDisparo {
    AGUA
    IMPACTO
    HUNDIMIENTO
    YA_DISPARADO
    TURNO_INCORRECTO
}

' ==================== RELACIONES ====================

Nave <|-- PortaAviones
Nave <|-- Crucero
Nave <|-- Submarino
Nave <|-- Barco

Partida "1" *-- "2" Jugador : jugadores
Partida "1" --> "1" Jugador : turno
Partida --> EstadoPartida : estado

Jugador "1" *-- "1" Tablero : tablero
Jugador "1" *-- "0..11" Nave : naves
Jugador --> ColorJugador : color
Jugador --> EstadoJugador : estado

Tablero "1" *-- "100" Casilla : casillas

Casilla "1" *-- "1" Coordenadas : coordenadas
Casilla "1" o-- "0..1" Nave : nave
Casilla --> EstadoCasilla : estado

Nave --> EstadoNave : estado
Nave --> OrientacionNave : orientacion

Disparo --> Jugador : jugador
Disparo --> Coordenadas : coordenadas
Disparo --> ResultadoDisparo : resultado

' ==================== NOTAS ====================

note right of Partida
    **Reglas:**
    - 2 jugadores
    - Tablero 10x10
    - 11 naves por jugador
    - Turno de 30 segundos
end note

note bottom of Nave
    **Tipos de Nave:**
    - PortaAviones: 4 (x2)
    - Crucero: 3 (x2)
    - Submarino: 2 (x4)
    - Barco: 1 (x3)
end note

@enduml
